<resources>
    <string name="app_name" translatable="false">GymApp</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="must_fill">Debe rellenar todos los campos</string>
    <string name="email_not_verified">Email no verificado</string>
    <string name="required">Campo requerido.</string>
    <string name="weak_pass">La contraseña debe contener al menos 6 caracteres.</string>
    <string name="invalid_email">Email no válido.</string>
    <string name="error_user_exists">Este usuario ya existe</string>
    <string name="surname">Apellidos</string>
    <string name="name">Nombre</string>
    <string name="not_registered"><u>¿Aún no tienes una cuenta? Regístrate.</u></string>
    <string name="proffesional">Soy un profesional de la actividad física</string>
    <string name="accept">Aceptar</string>
    <string name="signUp">Regístrate</string>
    <string name="exercises">Ejercicios</string>
    <string name="trainings">Entrenamientos</string>
    <string name="favourites">Favoritos</string>
    <string name="search">Buscar...</string>
    <string name="no_matches">*No se encuentra ninguna coincidencia*</string>
    <string name="add_section">Añadir nueva sección</string>
    <string name="new_section_name">Nombre de la nueva sección</string>
    <string name="kind">Seleccione el tipo de sección</string>
    <string name="add_activity">Añadir actividad</string>
    <string name="new_activity_name">Nombre de la actividad</string>
    <string name="new_activity_url">Url del vídeo (Youtube)</string>
    <string name="comments_instructions">Notas, comentarios e instrucciones sobre la actividad</string>
    <string name="rate">Valora la explicación</string>
    <string name="accept_rate">Valorar</string>
    <string name="must_youtube">El enlace debe ser de Youtube</string>
    <string name="not_playlist">No se admiten enlaces de listas de reproducción</string>
    <string name="home">Inicio</string>
    <string name="galery">Mi galería</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="view_profile">Ver perfil</string>
    <string name="add_photo">Subir foto</string>
    <string name="choose_photo">Elegir archivo</string>
    <string name="onFaiulre">Ha habido un error.</string>
    <string name="upload_successful">Se ha subido la imagen con éxito</string>
    <string name="upload_in_progress">Ya se está subiendo un archivo</string>
    <string name="view_image">Ver imagen</string>
    <string name="profile">Mi perfil</string>
    <string name="full_name">Nombre y apellidos</string>
    <string name="isProfesional">¿Profesional de la actividad física?</string>
    <string name="change_pass">Cambiar contraseña</string>
    <string name="old_pass">Indroduzca la contraseña actual</string>
    <string name="new_pass">Introduzca la nueva contraseña</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="wrong_password">Contraseña incorrecta</string>
    <string name="password_update_succeded">Cambiado correctamente. Vuelva a iniciar sesión con la nueva contraseña</string>

</resources>
